teacher_page_finished1

--- a/index.html
+++ b/index.html
@@ -18,52 +18,172 @@
     <hr id='bottom_line'>
   </header>
   <body>
-    <div class='content_box'>
-      <div class='name_box'>
-        <div class="name">
-          Sally Jones
-        </div>
-        <div class="major">
-          Physics
-        </div>
-      </div>
-      <div class="course">
-        Physics
-      </div>
-      <div class="rating">
-      </div>
+    <section>
+    <div class='student_info'>
+      <table width='300'>
+        <tr>
+          <td colspan="2">
+            <div class='name_box'>
+              <img src='images/american_flag.jpg' alt='flag' id='thumb_nail'>
+              <div class="name_and_major">
+                <p> Sally Jones </p>
+                <p> <strong> Physics </strong> </p>
+              </div>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div class="course_title">
+              <strong> Course </strong>
+            </div>
+            <div class="course">
+              Astronomy Physics
+            </div>
+          </td>
+          <td>
+            <div class="rating">
+              <strong> Rating </strong>
+            </div>
+            <div>
+              4.5 / 5
+            </div>
+          </td>
+        </tr>
+      </table>
     </div>
-    <div class='content_box'>
-      <div class='name'>
-      </div>
-      <div class="course">
-      </div>
-      <div class="rating">
-      </div>
+    <div class='student_info'>
+      <table width='300'>
+        <tr>
+          <td colspan="2">
+            <div class='name_box'>
+              <img src='images/american_flag.jpg' alt='flag' id='thumb_nail'>
+              <div class="name_and_major">
+                <p> Sally Jones </p>
+                <p> <strong> Physics </strong> </p>
+              </div>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div class="course_title">
+              <strong> Course </strong>
+            </div>
+            <div class="course">
+              Astronomy Physics
+            </div>
+          </td>
+          <td>
+            <div class="rating">
+              <strong> Rating </strong>
+            </div>
+            <div>
+              4.5 / 5
+            </div>
+          </td>
+        </tr>
+      </table>
     </div>
-    <div class='content_box'>
-      <div class='name'>
-      </div>
-      <div class="course">
-      </div>
-      <div class="rating">
-      </div>
+    <div class='student_info'>
+      <table width='300'>
+        <tr>
+          <td colspan="2">
+            <div class='name_box'>
+              <img src='images/american_flag.jpg' alt='flag' id='thumb_nail'>
+              <div class="name_and_major">
+                <p> Sally Jones </p>
+                <p> <strong> Physics </strong> </p>
+              </div>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div class="course_title">
+              <strong> Course </strong>
+            </div>
+            <div class="course">
+              Astronomy Physics
+            </div>
+          </td>
+          <td>
+            <div class="rating">
+              <strong> Rating </strong>
+            </div>
+            <div>
+              4.5 / 5
+            </div>
+          </td>
+        </tr>
+      </table>
     </div>
-    <div class='content_box'>
-      <div class='name'>
-      </div>
-      <div class="course">
-      </div>
-      <div class="rating">
-      </div>
+    <div class='student_info'>
+      <table width='300'>
+        <tr>
+          <td colspan="2">
+            <div class='name_box'>
+              <img src='images/american_flag.jpg' alt='flag' id='thumb_nail'>
+              <div class="name_and_major">
+                <p> Sally Jones </p>
+                <p> <strong> Physics </strong> </p>
+              </div>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div class="course_title">
+              <strong> Course </strong>
+            </div>
+            <div class="course">
+              Astronomy Physics
+            </div>
+          </td>
+          <td>
+            <div class="rating">
+              <strong> Rating </strong>
+            </div>
+            <div>
+              4.5 / 5
+            </div>
+          </td>
+        </tr>
+      </table>
     </div>
-    <div class='content_box'>
-      <div class='name'>
-      </div>
-      <div class="course">
-      </div>
-      <div class="rating">
-      </div>
+    <div class='student_info'>
+      <table width='300'>
+        <tr>
+          <td colspan="2">
+            <div class='name_box'>
+              <img src='images/american_flag.jpg' alt='flag' id='thumb_nail'>
+              <div class="name_and_major">
+                <p> Sally Jones </p>
+                <p> <strong> Physics </strong> </p>
+              </div>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div class="course_title">
+              <strong> Course </strong>
+            </div>
+            <div class="course">
+              Astronomy Physics
+            </div>
+          </td>
+          <td>
+            <div class="rating">
+              <strong> Rating </strong>
+            </div>
+            <div>
+              4.5 / 5
+            </div>
+          </td>
+        </tr>
+      </table>
     </div>
+  </section>
   </body>
 </html>
