all_pages_draft1

--- a/teacher_page.html
+++ b/teacher_page.html
@@ -4,6 +4,7 @@
     <title> Practice Flexbiox </title>
     <meta content="width=device-width,maximum-scale=1.0,initial-scale=1.0,minimum-scale=1.0,user-scalable=yes" name="viewport">
     <link href='css/main.css' rel='stylesheet'>
+    <link href='css/teacher_page.css' rel='stylesheet'>
   </head>
   <header>
     <hr id='top_line'>
@@ -11,8 +12,12 @@
       <div class='big_title'> CG Ed. </div>
       <div class="small_title">
         <div class='nav_item' id='item1'> TEACHERS </div>
-        <div class='nav_item' id='item2'> STUDENTS </div>
-        <div class='nav_item' id='item3'> COURSES </div>
+        <div class='nav_item' id='item2'>
+          <a href='student_page.html'> STUDENTS </a>
+        </div>
+        <div class='nav_item' id='item3'>
+          <a href='course_page.html'>  COURSES </a>
+        </div>
       </div>
     </div>
     <hr id='bottom_line'>
