student_page_finished1

--- a/student_page.html
+++ b/student_page.html
@@ -4,6 +4,7 @@
     <title> Student Page </title>
     <meta content="width=device-width,maximum-scale=1.0,initial-scale=1.0,minimum-scale=1.0,user-scalable=yes" name="viewport">
     <link href='css/main.css' rel='stylesheet'>
+    <link href='css/student_page.css' rel='stylesheet'>
   </head>
   <header>
     <hr id='top_line'>
@@ -24,7 +25,7 @@
   <body>
     <section>
     <div class='student_info'>
-      <table width='300'>
+      <table width='250'>
         <tr>
           <td>
             <div class='name_box'>
@@ -34,3 +35,97 @@
                 <p> <strong> Physics </strong> </p>
               </div>
             </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div class='content_box'>
+              <div class="tag_box">
+                <div> Email: </div>
+                <div> GPA: </div>
+                <div> Courses: </div>
+              </div>
+              <div class="info_box">
+                <div> sally.jones@cg.edu </div>
+                <div> 6.0 </div>
+                <div class="course_box">
+                  <div> Calculus </div>
+                  <div> Econ 101 </div>
+                </div>
+              </div>
+            </div>
+          </td>
+        </tr>
+      </table>
+    </div>
+    <div class='student_info'>
+      <table width='250'>
+        <tr>
+          <td>
+            <div class='name_box'>
+              <img src='images/american_flag.jpg' alt='flag' id='thumb_nail'>
+              <div class="name_and_major">
+                <p> Sally Jones </p>
+                <p> <strong> Physics </strong> </p>
+              </div>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div class='content_box'>
+              <div class="tag_box">
+                <div> Email: </div>
+                <div> GPA: </div>
+                <div> Courses: </div>
+              </div>
+              <div class="info_box">
+                <div> sally.jones@cg.edu </div>
+                <div> 6.0 </div>
+                <div class="course_box">
+                  <div> Calculus </div>
+                  <div> Econ 101 </div>
+                </div>
+              </div>
+            </div>
+          </td>
+        </tr>
+      </table>
+    </div>
+    <div class='student_info'>
+      <table width='250'>
+        <tr>
+          <td>
+            <div class='name_box'>
+              <img src='images/american_flag.jpg' alt='flag' id='thumb_nail'>
+              <div class="name_and_major">
+                <p> Sally Jones </p>
+                <p> <strong> Physics </strong> </p>
+              </div>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div class='content_box'>
+              <div class="tag_box">
+                <div> Email: </div>
+                <div> GPA: </div>
+                <div> Courses: </div>
+              </div>
+              <div class="info_box">
+                <div> sally.jones@cg.edu </div>
+                <div> 6.0 </div>
+                <div class="course_box">
+                  <div> Calculus </div>
+                  <div> Econ 101 </div>
+                </div>
+              </div>
+            </div>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </section>
+</body>
+</html>
