--- a/teacher_page.html
+++ b/teacher_page.html
@@ -50,7 +50,7 @@
             <div class="rating">
               <strong> Rating </strong>
             </div>
-            <div>
+            <div class="gpa">
               4.5 / 5
             </div>
           </td>
@@ -83,7 +83,7 @@
             <div class="rating">
               <strong> Rating </strong>
             </div>
-            <div>
+            <div class="gpa">
               4.5 / 5
             </div>
           </td>
@@ -116,7 +116,7 @@
             <div class="rating">
               <strong> Rating </strong>
             </div>
-            <div>
+            <div class="gpa">
               4.5 / 5
             </div>
           </td>
@@ -149,7 +149,7 @@
             <div class="rating">
               <strong> Rating </strong>
             </div>
-            <div>
+            <div class="gpa">
               4.5 / 5
             </div>
           </td>
@@ -182,7 +182,7 @@
             <div class="rating">
               <strong> Rating </strong>
             </div>
-            <div>
+            <div class="gpa">
               4.5 / 5
             </div>
           </td>
