--- a/course_page.html
+++ b/course_page.html
@@ -4,21 +4,106 @@
     <title> Practice Flexbiox </title>
     <meta content="width=device-width,maximum-scale=1.0,initial-scale=1.0,minimum-scale=1.0,user-scalable=yes" name="viewport">
     <link href='css/main.css' rel='stylesheet'>
+    <link href='css/course_page.css' rel='stylesheet'>
   </head>
   <header>
     <hr id='top_line'>
     <div class='nav'>
       <div class='big_title'> CG Ed. </div>
       <div class="small_title">
-        <div class='nav_item' id='item3'>
+        <div class='nav_item' id='item2'>
           <a href='teacher_page.html'> TEACHERS </a>
         </div>
         <div class='nav_item' id='item2'>
           <a href='student_page.html'> STUDENTS </a>
         </div>
-        <div class='nav_item' id='item1'> COURSES </div>
+        <div class='nav_item' id='item3'> COURSES </div>
       </div>
     </div>
     <hr id='bottom_line'>
   </header>
   <body>
+    <section>
+      <div class="teacher_info">
+        <div class="subject">
+          <div> Astronomy </div>
+          <div> Physics </div>
+        </div>
+        <div class="teacher_info_box">
+          <div class="info_tag">
+            <div> Teacher: </div>
+            <div> Semerster: </div>
+          </div>
+          <div class="info_box">
+            <div> Sally Jones </div>
+            <div> Fall 2017 </div>
+          </div>
+        </div>
+      </div>
+      <div class="teacher_info">
+        <div class="subject">
+          <div> Astronomy </div>
+          <div> Physics </div>
+        </div>
+        <div class="teacher_info_box">
+          <div class="info_tag">
+            <div> Teacher: </div>
+            <div> Semerster: </div>
+          </div>
+          <div class="info_box">
+            <div> Sally Jones </div>
+            <div> Fall 2017 </div>
+          </div>
+        </div>
+      </div>
+      <div class="teacher_info">
+        <div class="subject">
+          <div> Astronomy </div>
+          <div> Physics </div>
+        </div>
+        <div class="teacher_info_box">
+          <div class="info_tag">
+            <div> Teacher: </div>
+            <div> Semerster: </div>
+          </div>
+          <div class="info_box">
+            <div> Sally Jones </div>
+            <div> Fall 2017 </div>
+          </div>
+        </div>
+      </div>
+      <div class="teacher_info">
+        <div class="subject">
+          <div> Astronomy </div>
+          <div> Physics </div>
+        </div>
+        <div class="teacher_info_box">
+          <div class="info_tag">
+            <div> Teacher: </div>
+            <div> Semerster: </div>
+          </div>
+          <div class="info_box">
+            <div> Sally Jones </div>
+            <div> Fall 2017 </div>
+          </div>
+        </div>
+      </div>
+      <div class="teacher_info">
+        <div class="subject">
+          <div> Astronomy </div>
+          <div> Physics </div>
+        </div>
+        <div class="teacher_info_box">
+          <div class="info_tag">
+            <div> Teacher: </div>
+            <div> Semerster: </div>
+          </div>
+          <div class="info_box">
+            <div> Sally Jones </div>
+            <div> Fall 2017 </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
+  </html>
