--- a/teacher_page.html
+++ b/teacher_page.html
@@ -3,33 +3,34 @@
   <head>
     <title> Practice Flexbiox </title>
     <meta content="width=device-width,maximum-scale=1.0,initial-scale=1.0,minimum-scale=1.0,user-scalable=yes" name="viewport">
-    <link href='css/main.css' rel='stylesheet'>
-    <link href='css/teacher_page.css' rel='stylesheet'>
+    <link href="css/main.css" rel="stylesheet">
+    <link href="css/teacher_page.css" rel="stylesheet">
+    <script src="js/main.js"></script>
   </head>
   <header>
-    <hr id='top_line'>
-    <div class='nav'>
-      <div class='big_title'> CG Ed. </div>
+    <hr id="top_line">
+    <div class="nav">
+      <div class="big_title"> CG Ed. </div>
       <div class="small_title">
-        <div class='nav_item' id='item1'> TEACHERS </div>
-        <div class='nav_item' id='item2'>
-          <a href='student_page.html'> STUDENTS </a>
+        <div class="nav_item" id="item1"> TEACHERS </div>
+        <div class="nav_item" id="item2">
+          <a href="student_page.html"> STUDENTS </a>
         </div>
-        <div class='nav_item' id='item3'>
-          <a href='course_page.html'>  COURSES </a>
+        <div class="nav_item" id="item3">
+          <a href="course_page.html">  COURSES </a>
         </div>
       </div>
     </div>
-    <hr id='bottom_line'>
+    <hr id="bottom_line">
   </header>
   <body>
     <section>
-    <div class='student_info'>
-      <table width='300'>
+    <div class="student_info">
+      <table width="350">
         <tr>
           <td colspan="2">
-            <div class='name_box'>
-              <img src='images/american_flag.jpg' alt='flag' id='thumb_nail'>
+            <div class="name_box">
+              <img src="images/american_flag.jpg" alt="flag" id="thumb_nail">
               <div class="name_and_major">
                 <p> Sally Jones </p>
                 <p> <strong> Physics </strong> </p>
@@ -57,12 +58,12 @@
         </tr>
       </table>
     </div>
-    <div class='student_info'>
-      <table width='300'>
+    <div class="student_info">
+      <table width="350">
         <tr>
           <td colspan="2">
-            <div class='name_box'>
-              <img src='images/american_flag.jpg' alt='flag' id='thumb_nail'>
+            <div class="name_box">
+              <img src="images/american_flag.jpg" alt="flag" id="thumb_nail">
               <div class="name_and_major">
                 <p> Sally Jones </p>
                 <p> <strong> Physics </strong> </p>
@@ -90,12 +91,12 @@
         </tr>
       </table>
     </div>
-    <div class='student_info'>
-      <table width='300'>
+    <div class="student_info">
+      <table width="350">
         <tr>
           <td colspan="2">
-            <div class='name_box'>
-              <img src='images/american_flag.jpg' alt='flag' id='thumb_nail'>
+            <div class="name_box">
+              <img src="images/american_flag.jpg" alt="flag" id="thumb_nail">
               <div class="name_and_major">
                 <p> Sally Jones </p>
                 <p> <strong> Physics </strong> </p>
@@ -123,12 +124,12 @@
         </tr>
       </table>
     </div>
-    <div class='student_info'>
-      <table width='300'>
+    <div class="student_info">
+      <table width="350">
         <tr>
           <td colspan="2">
-            <div class='name_box'>
-              <img src='images/american_flag.jpg' alt='flag' id='thumb_nail'>
+            <div class="name_box">
+              <img src="images/american_flag.jpg" alt="flag" id="thumb_nail">
               <div class="name_and_major">
                 <p> Sally Jones </p>
                 <p> <strong> Physics </strong> </p>
@@ -156,12 +157,12 @@
         </tr>
       </table>
     </div>
-    <div class='student_info'>
-      <table width='300'>
+    <div class="student_info">
+      <table width="350">
         <tr>
           <td colspan="2">
-            <div class='name_box'>
-              <img src='images/american_flag.jpg' alt='flag' id='thumb_nail'>
+            <div class="name_box">
+              <img src="images/american_flag.jpg" alt="flag" id="thumb_nail">
               <div class="name_and_major">
                 <p> Sally Jones </p>
                 <p> <strong> Physics </strong> </p>
