--- a/course_page.html
+++ b/course_page.html
@@ -5,6 +5,7 @@
     <meta content="width=device-width,maximum-scale=1.0,initial-scale=1.0,minimum-scale=1.0,user-scalable=yes" name="viewport">
     <link href='css/main.css' rel='stylesheet'>
     <link href='css/course_page.css' rel='stylesheet'>
+    <script src="js/course.js"></script>
   </head>
   <header>
     <hr id='top_line'>
