--- a/student_page.html
+++ b/student_page.html
@@ -5,6 +5,7 @@
     <meta content="width=device-width,maximum-scale=1.0,initial-scale=1.0,minimum-scale=1.0,user-scalable=yes" name="viewport">
     <link href='css/main.css' rel='stylesheet'>
     <link href='css/student_page.css' rel='stylesheet'>
+    <script src="js/student.js"></script>
   </head>
   <header>
     <hr id='top_line'>
