--- a/teacher_page.html
+++ b/teacher_page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Practice Flexbiox </title>
+    <title> Practice Flexbox </title>
     <meta content="width=device-width,maximum-scale=1.0,initial-scale=1.0,minimum-scale=1.0,user-scalable=yes" name="viewport">
     <link href="css/main.css" rel="stylesheet">
     <link href="css/teacher_page.css" rel="stylesheet">
